# medibot-rag

./: .env.example  .gitignore  index.py  pyproject.toml  readme.md  requirements.txt
api/: auth.py  chat.py  collections.py  dependencies.py  models.py  rag.py
chunker/: ingest.py  medichunker.py  models.py  reranker.py  retriever.py
frontend/: .env.local.example  .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ChatMessage.tsx  Sidebar.tsx  SourceList.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
sql_rag/: __init__.py  sql_rag.py
