[project]
name = "medibot-rag"
version = "0.1.0"
description = "Medical RAG system using Docling for document processing"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "docling==2.101.0",
    "docling-slim",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.4.0",
    "langchain-community>=0.3.0",
    "groq>=0.9.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
]
